Load shared header on GiantBomb skin

--- a/skins/GiantBomb/includes/templates/landingPage/landing-page.mustache
+++ b/skins/GiantBomb/includes/templates/landingPage/landing-page.mustache
@@ -1,5 +1,7 @@
 <div id="landing-page-container">
-    
+
+    <div id="gb-header" class="gb-header"></div>
+
     {{> wiki-button-group }}
 
     <div id="dynamic-content">
